// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slot renders a red slot correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-2b7f7c93-0 ewezXh"
    role="button "
    value="USER_ROLE_RED"
  />
</DocumentFragment>
`;

exports[`Slot renders a yellow slot correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-2b7f7c93-0 cNAEWC"
    role="button "
    value="USER_ROLE_YELLOW"
  />
</DocumentFragment>
`;

exports[`Slot renders an empty slot correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-2b7f7c93-0 bONUyQ"
    role="button "
  />
</DocumentFragment>
`;
